# garfield

cgal_ksr_project/: CMakeLists.txt  ksr_building.cpp  ransac_detection.cpp  region_growing_detection.cpp
garfield/: extract_orthogonal_views.py  garfield_datamanager.py  garfield_gaussian_pipeline.py  garfield_semantic_export.py  img_group_model.py  interactive_nerfotho.py  interactive_nerfotho2.py  interactive_nerfotho_garfield.py  mesh_to_Lego  nerfotho_garfield.py  nerfotho_instance.py
